crates/plotnik-tests/tests/04-emit/bytecode/binding/supertype_in_alternation_rejected.txt
Q = [
  (expression#statement_block)
  (identifier)
]
------------------ DIAGNOSTICS -------------------
error: matching the `expression#` supertype is not supported yet
 --> query.ptk:2:4
  |
2 |   (expression#statement_block)
  |    ^^^^^^^^^^
  |
help: choose the concrete subtypes of `expression` that this query should match
help: the grammar includes `assignment_expression`, `augmented_assignment_expression`, `await_expression`, `binary_expression`, `jsx_element`, Рђд (7 more)
